<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <RelativeLayout
        android:id="@+id/upper_bg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/purple">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/changeNote"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/inputInfo"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="506dp"
        android:layout_above="@+id/bottom_menu"
        android:layout_below="@+id/upper_bg"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:inputType="text"
            android:hint="@string/nameTask"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:inputType="textMultiLine"
            android:hint="@string/descriptionTask"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/chooseDate"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:textSize="20sp" />
        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/purple">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:backgroundTint="@color/blue"
            android:onClick="goBack"
            android:text="@string/back" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:layout_marginStart="43dp"
            android:onClick="goDate"
            android:text="@string/save" />
    </LinearLayout>
</RelativeLayout>