<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/upper_bg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/purple">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/nameApplication"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/descriptionApplication"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/chiper"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@+id/upper_bg">
        <CheckBox
            android:id="@+id/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Done"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/findEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="text"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/find"/>
    </LinearLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="100dp"
        android:gravity="center"
        android:horizontalSpacing="2dp"
        android:numColumns="2"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        android:layout_below="@+id/chiper"
        android:layout_above="@+id/bottom_menu"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp">
    </GridView>
    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/purple">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:backgroundTint="@color/blue"
            android:onClick="goHome"
            android:text="@string/homeButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2sp"
            android:backgroundTint="@color/blue"
            android:onClick="goDate"
            android:text="@string/colendaryButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:backgroundTint="@color/blue"
            android:onClick="goProgress"
            android:text="@string/progressButton" />
    </LinearLayout>
</RelativeLayout>